# inventory_check

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_ROADMAP.md  ISSUES.md  README-Docker.md  README-Kubernetes.md  README.md  README_INFRASTRUCTURE.md  README_github.md  annotation_tools.py  api_server.py  app.py  data_quality_checker.py  dataset_manager.py  dinov2_segmenter.py  docker-build.sh  docker-compose.gpu.yml  docker-compose.yml  evaluation_framework.py  inventory_checker.py  issues.md  medical_yolo.py  model_comparison.py  pyproject.toml  requirements-dev.txt  requirements.txt  segmentation_app.py  training_pipeline.py  visualization.py  websocket_server.py  yolo_app.py
ci-cd/: github-actions.yml
docker/: Dockerfile.api  docker-compose.yml
k8s/: deploy.sh
k8s/base/: api-gpu.yaml  api.yaml  configmap.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  nginx.yaml  persistent-volumes.yaml  postgres.yaml  redis.yaml  secrets.yaml  websocket.yaml
k8s/overlays/production/: api-gpu.yaml  kustomization.yaml  pod-security-policy.yaml
k8s/overlays/production/patches/: api-production.yaml  resources-production.yaml
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
sql/: init.sql
src/: app.py
src/data/: inventory_db.py
src/models/: dino_extractor.py
tests/: test_api_server.py  test_dataset_manager.py  test_evaluation_framework.py  test_medical_yolo.py
