[project]
name = "inventory-check"
version = "0.1.0"
description = "AI-powered medical inventory checker using computer vision"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.45.0",
    "torch>=2.0.0", 
    "torchvision>=0.15.0",
    "qwen-vl-utils>=0.0.8",
    "gradio>=4.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-image>=0.21.0",
    "huggingface-hub>=0.19.0",
    "accelerate>=0.25.0",
    "timm>=0.9.0",
    "spaces>=0.19.0",
    "einops>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true